Closed Bug 155652 Opened 24 years ago Closed 24 years ago

easy nsTableFrame.cpp build warning fix

Categories

(Core :: Layout: Tables, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bernd_mozilla, Assigned: bernd_mozilla)

References

Details

Attachments

(1 file, 1 obsolete file)

5.62 KB, patch
bernd_mozilla
: review+
bzbarsky
: superreview+
Details | Diff | Splinter Review
we can easily get of the following warnings: 21.layout/html/table/src/nsTableFrame.cpp:1037 Unused variable `PRInt32 colIndex' 22.layout/html/table/src/nsTableFrame.cpp:1744 Unused variable `nscoord tableY' 23.layout/html/table/src/nsTableFrame.cpp:3235 Unused variable `struct nsMargin collapseBorder' layout/html/table/src/nsTableFrame.cpp:3236 Unused variable `struct nsMargin padding' layout/html/table/src/nsTableFrame.cpp:3574 Unused variable `nscoord sumOfRowHeights' layout/html/table/src/nsTableFrame.cpp:3576 Unused variable `nscoord rowGroupYPos' 27.layout/html/table/src/nsTableFrame.cpp:4872 Unused variable `PRInt32 rgRowIndex' 30.layout/html/table/src/nsTableFrame.cpp:5794 Unused variable `const struct nsStyleBorder * tableStyle' 31.layout/html/table/src/nsTableFrame.cpp:5814 Unused variable `class nsTableRowFrame * prevRow' 32.layout/html/table/src/nsTableFrame.cpp:5904 `class nsTableRowFrame * rowFrame' might be used uninitialized in this function 33.layout/html/table/src/nsTableFrame.cpp:5937 `class nsTableRowFrame * rowFrame' might be used uninitialized in this function 7.layout/html/table/src/nsTableFrame.cpp:2645 Unused variable `class nsTableRowGroupFrame * prevRowGroup' 1.layout/html/table/src/nsTableFrame.cpp:7376 `void GetPlaceholderFor(nsIPresContext &, nsIFrame &, nsIFrame **)' defined but not used
Attached patch patch (obsolete) — Splinter Review
Comment on attachment 90110 [details] [diff] [review] patch r=karnaze, please remove this line + //nsTableRowGroupFrame* prevRowGroup = (nsTableRowGroupFrame *)nsTableFrame::GetFrameAtOrBefore(aPresContext, this, aPrevFrame, nsLayoutAtoms::tableRowGroupFrame);
Attachment #90110 - Flags: review+
Comment on attachment 90110 [details] [diff] [review] patch Do we ever use GetPlaceholderFor? Why can't we just remove it? Also, it's already declared static... do doing it again should not matter...
Attached patch patch v2Splinter Review
Attachment #90110 - Attachment is obsolete: true
Comment on attachment 94501 [details] [diff] [review] patch v2 r=karnaze carry over from previous patch, boris you are right that function isnt used anymore
Attachment #94501 - Flags: review+
Comment on attachment 94501 [details] [diff] [review] patch v2 sr=bzbarsky
Attachment #94501 - Flags: superreview+
Blocks: 59652
fix checked in
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: