bug 155652 build warning fix r=karnaze sr=bz